--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">Angular Routing Example</a>
             </div>
-
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
                 <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
@@ -40,9 +39,9 @@
 </header>
 
 <!-- MAIN CONTENT AND INJECTED VIEWS -->
-<div id="main">
+<div id="main" class="container-fluid">
 
-    <!-- angular templating -->
+    <!-- angular templating
     <!-- this is where content will be injected -->
     <div ng-view></div>
 
