Initial Page for commit

--- a/app/js/pages/home.html
+++ b/app/js/pages/home.html
@@ -1,1 +1,40 @@
-<div class=""></div>
+<!--<div class="jumbotron" style="background: #BBD631">-->
+<div class="jumbotron" style="background: #4D4D4D">
+    <div class="container">
+        <div class="text-center">
+            <img src="{{globals.rootUrl}}app/images/logo.jpg" class="img-circle" width="300">
+            <h1 style="color: #BBD631"> Palitan <span style="color: #5CBBBF;">Tayo!</span></h1>
+            <input class="input-lg" type="text" placeholder="What are you looking for?" style="width: 700px;">
+            <br/>
+            <br/>
+            <p><a class="btn btn-success btn-lg" href="#/" role="button">Search here!</a></p>
+
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4 col-sm-4">
+            <h3>Column 1</h3>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <h3>Column 2</h3>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <h3>Column 3</h3>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+        </div>
+    </div>
+</div>
+
