--- a/index.html
+++ b/index.html
@@ -19,27 +19,33 @@
     <script src="app/js/controllers/mainController.js"></script>
     <!--Services-->
     <!--Factories-->
+    <script src="app/js/factories/globals.js"></script>
 </head>
-<body ng-controller="mainController">
+<body ng-controller="mainController"  style="background: white">
 
 <!-- HEADER AND NAVBAR -->
-<header>
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">Angular Routing Example</a>
+<div style="z-index: 1000 !important; margin-bottom: 0px !important;">
+    <header>
+        <nav class="navbar navbar-default">
+            <div class="container" style="z-index: 1000 !important;">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">
+                        <h4 style="color: #BBD631; margin-top: 0px"> Palitan <span style="color: #5CBBBF;">Tayo!</span></h4>
+                    </a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                    <li><a href="#about"><i class="fa fa-reorder"></i> Items</a></li>
+                    <li><a href="#contact"><i class="fa fa-comment"></i> Forums</a></li>
+                </ul>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-                <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
+</div>
+
 
 <!-- MAIN CONTENT AND INJECTED VIEWS -->
-<div id="main" class="container-fluid">
+<div id="main">
 
     <!-- angular templating
     <!-- this is where content will be injected -->
