new components and updated login page

--- a/app/js/pages/items.html
+++ b/app/js/pages/items.html
@@ -85,22 +85,22 @@
             <a href="#" class="thumbnail">
                 <img src="http://placehold.it/300x150" alt="..." />
             </a>
-        </div>
+        </div>sh
     </div>
     <nav>
         <ul class="pagination" style="float: right; background: #56BEC1">
             <li>
-                <a href="#" aria-label="Previous">
+                <a href="#" aria-label="Previous" style="margin-bottom: 0px !important;">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
+            <li><a href="#" style="margin-bottom: 0px !important;">1</a></li>
+            <li><a href="#" style="margin-bottom: 0px !important;">2</a></li>
+            <li><a href="#" style="margin-bottom: 0px !important;">3</a></li>
+            <li><a href="#" style="margin-bottom: 0px !important;">4</a></li>
+            <li><a href="#" style="margin-bottom: 0px !important;">5</a></li>
             <li>
-                <a href="#" aria-label="Next">
+                <a href="#" aria-label="Next" style="margin-bottom: 0px !important;">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
