--- a/app/js/pages/login.html
+++ b/app/js/pages/login.html
@@ -11,8 +11,8 @@
     </div>
     <br>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-8" style="border: 1px solid #E5E5E5; background: white">
+        <div class="row" style="border: 1px solid #E5E5E5;">
+            <div class="col-sm-8" style="background: white">
                 <div class="page-header" style="margin-top: 0px">
                     <h4>Login</h4>
                 </div>
@@ -28,12 +28,41 @@
                     <button type="submit" class="btn btn-success btn-extra">Login Here!</button>
                     <small>Forgot Password?</small>
                 </form>
+                <div class="text-center">
+                    <button type="button" class="btn btn-primary btn-extra">Login using Facebook</button>
+                    or
+                    <button type="button" class="btn btn-danger btn-extra">Login using Gmail</button>
+                </div>
+                <br>
+                <div class="text-center" style="border-top: 1px solid #e5e5e5">
+                    <h4>Advertisement here</h4>
+                </div>
                 <br>
             </div>
             <div class="col-sm-4" style="background: #56BEC1">
                 <div class="page-header" style="margin-top: 0px">
                     <h4 style="color: white">Register Here!</h4>
                 </div>
+                <form class="navbar-form" role="register">
+                    <div class="form-group" style="width: 100%">
+                        <input type="text" class="form-control" style="width: 100%" placeholder="Username">
+                        <br>
+                        <br>
+                        <input type="password" class="form-control" style="width: 100%" placeholder="Password">
+                        <br>
+                        <br>
+                        <input type="text" class="form-control" style="width: 100%" placeholder="First Name">
+                        <br>
+                        <br>
+                        <input type="text" class="form-control" style="width: 100%" placeholder="Last Name">
+                        <br>
+                        <br>
+                        <input type="email" class="form-control" style="width: 100%" placeholder="Email Address">
+                    </div>
+                    <br>
+                    <br>
+                    <button type="submit" class="btn btn-default btn-extra">Register Now!</button>
+                </form>
             </div>
 
         </div>
