--- a/index.html
+++ b/index.html
@@ -7,14 +7,37 @@
     <!-- load bootstrap and fontawesome via local -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="bower_components/flat-ui/dist/css/flat-ui.css" />
+    <!-- Ng Dialog-->
+    <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog.css" />
+    <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog-theme-default.css">
+    <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog-theme-plain.css">
+    <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog-custom-width.css">
+    <style>
+        a, button {
+            font: 14px 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+            display: block;
+            color: #333;
+            margin-bottom: 10px;
+        }
+        /* The following 'important' styles are just here to show off trapFocus */
+        button.ngdialog-button {
+            border: solid transparent 1px !important;
+        }
+        button.ngdialog-button:focus {
+            border: solid black 1px !important;
+        }
+        .ngdialog h2:focus { outline: none; }
+    </style>
+
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
 
     <!-- SPELLS -->
     <!-- load angular and angular route via CDN -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="bower_components/angularjs/angular.min.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/ngDialog/js/ngDialog.js"></script>
     <script src="bower_components/gsap/src/minified/TweenMax.min.js"></script>
     <script src="app/js/app.js"></script>
     <script src="app/js/routing.js"></script>
@@ -40,6 +63,12 @@
             font-size: 15px !important;
             color: #777 !important;
             font-weight: 100 !important;
+        }
+        #footer{
+            background: #E5E5E5;
+        }
+        #footer h4{
+            color: white;
         }
     </style>
 
@@ -80,6 +109,19 @@
 </div>
 <div id="footer">
     <div class="container-fluid">
+        <div class="row" style="background: #56BEC1">
+            <div class="col-md-7 col-sm-7">
+                <h5 style="color: white">Sign up for our Newsletter!</h5>
+            </div>
+            <div class="col-md-5 col-sm-5" style="padding-top: 5px">
+                <form class="navbar-form navbar-right" role="search">
+                    <div class="form-group" >
+                        <input type="text" class="form-control" style="width: 400px" placeholder="Your email address...">
+                    </div>
+                    <button type="submit" class="btn btn-warning">Sign up</button>
+                </form>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-4 col-sm-4">
                 <h4>Column 1</h4>
