--- a/app/js/pages/items.html
+++ b/app/js/pages/items.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="app/css/items.css" />
+<link rel="stylesheet" href="app/css/items.css"/>
 
 
 <div class="container-fluid">
@@ -6,7 +6,8 @@
         <div class="col-md-12 col-sm-12">
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
-                    <input type="text" class="form-control" style="width: 400px" placeholder="What are you looking for?">
+                    <input type="text" class="form-control" style="width: 400px"
+                           placeholder="What are you looking for?">
                 </div>
                 <button type="submit" class="btn btn-success">Search here</button>
             </form>
@@ -33,8 +34,10 @@
         </div>
         <div class="col-md-4 col-sm-4">
             <div style="padding-top: 20px">
-                <img src="{{globals.rootUrl}}app/images/logo.jpg" class="img-responsive img-circle" width="60" style="display: inline">
+                <img src="{{globals.rootUrl}}app/images/logo.jpg" class="img-responsive img-circle" width="60"
+                     style="display: inline">
                 <b style="font-size: 18px">Ohmel Paguirigan</b>
+
                 <p style="border-top: 1px solid #E6E6E6; padding-top: 10px">
                     Description Goes Here!
                     <br/><br/>
@@ -51,42 +54,81 @@
             <h3 style="color: #BED735">Browse <span style="color: #56BEC1;">Here!</span></h3>
         </div>
         <br/>
+
         <div class="col-xs-4">
-            <a href="#" class="thumbnail">
-                <img src="http://placehold.it/400x200" alt="..." />
-            </a>
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="http://placehold.it/400x200" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel">
+                Label 1
+            </div>
         </div>
         <div class="col-xs-4">
-            <a href="#" class="thumbnail">
-                <img src="http://placehold.it/400x200" alt="..." />
-            </a>
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="http://placehold.it/400x200" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel">
+                Label 1
+            </div>
         </div>
         <div class="col-xs-4">
-            <a href="#" class="thumbnail">
-                <img src="http://placehold.it/400x200" alt="..." />
-            </a>
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="http://placehold.it/400x200" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel">
+                Label 1
+            </div>
+        </div>
+
+        <div class="col-xs-3">
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="http://placehold.it/300x150" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel">
+                Label 1
+            </div>
         </div>
         <div class="col-xs-3">
-            <a href="#" class="thumbnail">
-                <img src="http://placehold.it/300x150" alt="..." />
-            </a>
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="http://placehold.it/300x150" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel">
+                Label 1
+            </div>
         </div>
         <div class="col-xs-3">
-            <a href="#" class="thumbnail">
-                <img src="http://placehold.it/300x150" alt="..." />
-            </a>
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="http://placehold.it/300x150" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel">
+                Label 1
+            </div>
         </div>
         <div class="col-xs-3">
-            <a href="#" class="thumbnail">
-                <img src="http://placehold.it/300x150" alt="..." />
-            </a>
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="http://placehold.it/300x150" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{tooltipMessage}}" tooltip-placement="top">
+                Product
+            </div>
         </div>
-        <div class="col-xs-3">
-            <a href="#" class="thumbnail">
-                <img src="http://placehold.it/300x150" alt="..." />
-            </a>
-        </div>sh
+        sh
     </div>
+    <a href="#0" tooltip>My Tooltip Link</a>
     <nav>
         <ul class="pagination" style="float: right; background: #56BEC1">
             <li>
@@ -107,3 +149,4 @@
         </ul>
     </nav>
 </div>
+
