--- a/app/js/pages/home.html
+++ b/app/js/pages/home.html
@@ -10,7 +10,8 @@
     .home-tile h3 {
         color: white !important;
     }
-    .btn-extra{
+
+    .btn-extra {
         border-radius: 6px !important;
         font-size: 22px !important;
         line-height: 1.227 !important;
@@ -19,60 +20,186 @@
     }
 </style>
 <div class="jumbotron" style="background: #E5E5E5">
-<!--<div class="jumbotron" style="background: #4D4D4D; margin-bottom: 0px">-->
+    <!--<div class="jumbotron" style="background: #4D4D4D; margin-bottom: 0px">-->
     <div class="container">
         <div class="text-center">
-            <img src="{{globals.rootUrl}}app/images/logo2.png" class="img-responsive" width="">
+            <img src="{{globals.rootUrl}}app/images/logo2.png" class="img-responsive center-block" width="850">
             <!--<h1 style="color: #BBD631"> Palitan <span style="color: #5CBBBF;">Tayo!</span></h1>-->
-            <form class="navbar-form" role="search">
-                <div class="form-group" style="width: 100%">
-                    <input type="text" class="form-control" style="height: 50px; width: 100%; padding: 10px; font-size: 20px" placeholder="What are you looking for?">
+            <form class="navbar-form form-inline" role="search">
+                <div class="form-group" style="width: 30%">
+                    <input type="text" class="form-control"
+                           style="height: 50px; width: 100%; padding: 10px; font-size: 20px"
+                           placeholder="What do you have?">
+                </div>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div class="form-group" style="width: 30%">
+                    <input type="text" class="form-control"
+                           style="height: 50px; width: 100%; padding: 10px; font-size: 20px"
+                           placeholder="What are you looking for?">
                 </div>
                 <br>
                 <br>
-                <button type="submit" class="btn btn-success btn-extra">Search here</button>
+                <button type="submit" class="btn btn-success btn-extra">Find a trade match</button>
             </form>
         </div>
     </div>
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6 col-sm-6" style="background: #BBD631; border: 1px solid #BBD631">
-            <div class="container-fluid home-tile">
-                <div class="page-header">
-                    <h3>No Money? <br/>
-                        <small>Just like everybody...</small>
-                    </h3>
+        <div class="col-md-12 col-sm-12" style="background: #BBD631; border: 1px solid #BBD631">
+            <div class="container-fluid home-tile row">
+                <div class="col-md-6 col-sm-6 text-center" style="height: 100%; color: white">
+                    <h3>Swap your items <br> to these products!</h3>
+                    <button type="button" class="btn btn-primary"><b>View Items</b></button>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-sm-6" style="background: #5CBBBF; border: 1px solid #5CBBBF">
-            <div class="container-fluid home-tile">
-                <div class="page-header">
-                    <h3>No Money? <br/>
-                        <small>Just like everybody...</small>
-                    </h3>
+                <div class="col-md-6  col-sm-6">
+                    <img src="{{globals.rootUrl}}app/images/home/home_banner.png"
+                         style="position: absolute; top: -70px; right: 0px" class="img-responsive" width="600">
                 </div>
+
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6 col-sm-6" style="background: #e5e5e5; border: 1px solid #e5e5e5">
             <div class="container-fluid home-tile">
-                <div class="page-header">
-                    <h3>No Money? <br/>
-                        <small>Just like everybody...</small>
-                    </h3>
+                <div>
+                    <h4 style="color: #50C0C1">What is Palitan Tayo?</h4>
+
+                    <p>
+                        PALITAN TAYO is a free online SWAP marketplace. The users are using this website to share their
+                        items to swap for their ideal items.
+                        DO YOU WANT TO TRADE YOUR ITEMS? All you have to do is SIGN UP! UPLOAD! SHARE!
+                    </p>
+
                 </div>
             </div>
         </div>
         <div class="col-md-6 col-sm-6" style="background: #4D4D4D; border: 1px solid #4D4D4D">
-            <div class="container-fluid home-tile">
-                <div class="page-header">
-                    <h3>No Money? <br/>
-                        <small>Just like everybody...</small>
-                    </h3>
+            <div class="container-fluid home-tile text-center">
+                <div>
+                    <h4 style="color: white">Trade your items now!</h4>
+                    <button type="button" class="btn btn-primary"><b>Sign up with Facebook</b></button>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-default"><b>Register</b></button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button type="button" class="btn btn-default"><b>Login</b></button>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<style>
+    .thumbnail{
+        margin: 0px !important;
+        border: none; !important;
+    }
+    .hehe{
+        margin: 0px !important;
+        padding: 2px !important;
+        border: none;
+    }
+    .hehe2{
+        margin: 0px !important;
+        padding-top: 0px !important;
+    }
+</style>
+<div class="page-header" style="padding-left: 20px; margin-bottom: 0px; padding-bottom: 0px; margin-top: 0px">
+    <h3 style="color: #BED735">Cate<span style="color: #56BEC1;">gories!</span></h3>
+</div>
+<div class="container-fluid">
+    <div class="row hehe2" >
+        <div class="col-md-4 hehe">
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="{{globals.rootUrl}}app/images/categories/r1-1.gif" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
+            </div>
+        </div>
+        <div class="col-md-2 hehe">
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="{{globals.rootUrl}}app/images/categories/r1-2.gif" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
+            </div>
+        </div>
+        <div class="col-md-2 hehe">
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="{{globals.rootUrl}}app/images/categories/r1-3.gif" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
+            </div>
+        </div>
+        <div class="col-md-4 hehe">
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="{{globals.rootUrl}}app/images/categories/r1-4.gif" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
+            </div>
+        </div>
+    </div>
+    <div class="row hehe2">
+        <div class="col-md-2 hehe">
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="{{globals.rootUrl}}app/images/categories/r2-1.gif" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
+            </div>
+        </div>
+        <div class="col-md-2 hehe">
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="{{globals.rootUrl}}app/images/categories/r2-2.gif" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
+            </div>
+        </div>
+        <div class="col-md-4 hehe">
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="{{globals.rootUrl}}app/images/categories/r2-3.gif" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
+            </div>
+        </div>
+        <div class="col-md-2 hehe">
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="{{globals.rootUrl}}app/images/categories/r2-4.gif" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
+            </div>
+        </div>
+        <div class="col-md-2 hehe">
+            <div class="thumbnail">
+                <a href="#" class="">
+                    <img src="{{globals.rootUrl}}app/images/categories/r2-5.gif" alt="..."/>
+                </a>
+            </div>
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
             </div>
         </div>
     </div>
