--- a/app/js/pages/items.html
+++ b/app/js/pages/items.html
@@ -2,8 +2,14 @@
 
 
 <div class="container-fluid">
-    <div class="row" style="background: #BED735">
-        <div class="col-md-12 col-sm-12">
+    <div class="row" style="background: #BED735;">
+        <!--<div class="col-md-2">-->
+            <!--&lt;!&ndash;<div style="background: white; display: inline-block">&ndash;&gt;-->
+                <!--&lt;!&ndash;<img src="{{globals.rootUrl}}app/images/menu_logo.jpg" class="img-responsive img-circle"&ndash;&gt;-->
+                     <!--&lt;!&ndash;style="display: inline">&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--</div>-->
+        <div class="col-md-12">
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
                     <input type="text" class="form-control" style="width: 400px"
@@ -14,9 +20,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="page-header" style="padding-left: 20px; margin-bottom: 0px; padding-bottom: 0px; margin-top: 0px">
-            <h3 style="color: #BED735">Featured <span style="color: #56BEC1;">Today!</span></h3>
+        <div class="">
+            <div class="col-md-12 page-header" style="padding-left: 20px; margin-bottom: 0px; padding-bottom: 0px; margin-top: 0px">
+                <h3 style="color: #BED735">Featured <span style="color: #56BEC1;">Today!</span></h3>
+            </div>
         </div>
+
         <div class="col-md-8 col-sm-8 slider">
             <img ng-repeat="slide in slides" class="slide slide-animation nonDraggableImage img-responsive"
                  ng-swipe-right="nextSlide()" ng-swipe-left="prevSlide()"
@@ -54,79 +63,18 @@
             <h3 style="color: #BED735">Browse <span style="color: #56BEC1;">Here!</span></h3>
         </div>
         <br/>
-
-        <div class="col-xs-4">
+        <div class="col-md-4" ng-repeat="item in items">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="http://placehold.it/400x200" alt="..."/>
                 </a>
             </div>
-            <div class="container-fluid tlabel">
-                Label 1
-            </div>
-        </div>
-        <div class="col-xs-4">
-            <div class="thumbnail">
-                <a href="#" class="">
-                    <img src="http://placehold.it/400x200" alt="..."/>
-                </a>
-            </div>
-            <div class="container-fluid tlabel">
-                Label 1
-            </div>
-        </div>
-        <div class="col-xs-4">
-            <div class="thumbnail">
-                <a href="#" class="">
-                    <img src="http://placehold.it/400x200" alt="..."/>
-                </a>
-            </div>
-            <div class="container-fluid tlabel">
-                Label 1
+            <div class="container-fluid tlabel" tooltip="{{item}}" tooltip-placement="top">
+                {{item}}
             </div>
         </div>
 
-        <div class="col-xs-3">
-            <div class="thumbnail">
-                <a href="#">
-                    <img src="http://placehold.it/300x150" alt="..."/>
-                </a>
-            </div>
-            <div class="container-fluid tlabel">
-                Label 1
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="thumbnail">
-                <a href="#">
-                    <img src="http://placehold.it/300x150" alt="..."/>
-                </a>
-            </div>
-            <div class="container-fluid tlabel">
-                Label 1
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="thumbnail">
-                <a href="#">
-                    <img src="http://placehold.it/300x150" alt="..."/>
-                </a>
-            </div>
-            <div class="container-fluid tlabel">
-                Label 1
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="thumbnail">
-                <a href="#">
-                    <img src="http://placehold.it/300x150" alt="..."/>
-                </a>
-            </div>
-            <div class="container-fluid tlabel" tooltip="{{tooltipMessage}}" tooltip-placement="top">
-                Product
-            </div>
-        </div>
-        sh
+
     </div>
     <a href="#0" tooltip>My Tooltip Link</a>
     <nav>
