--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
             <div class="col-md-5 col-sm-5" style="padding-top: 5px">
                 <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group" >
+                    <div class="form-group">
                         <input type="text" class="form-control" style="width: 400px" placeholder="Your email address...">
                     </div>
                     <button type="submit" class="btn btn-warning">Sign up</button>
@@ -133,26 +133,16 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-sm-4">
-                <h4>Column 1</h4>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            <div class="col-md-4 col-sm-4" style="padding: 10px">
+                <p>Palitantayo.com</p>
             </div>
             <div class="col-md-4 col-sm-4">
-                <h4>Column 2</h4>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
             </div>
-            <div class="col-md-4 col-sm-4">
-                <h4>Column 3</h4>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            <div class="col-md-4 col-sm-4" style="text-align: right; padding: 10px">
+                <i class="fa fa-facebook" style="font-size: 30px"></i>
+                <i class="fa fa-twitter" style="font-size: 30px"></i>
+                <i class="fa fa-instagram" style="font-size: 30px"></i>
             </div>
         </div>
     </div>
