--- a/app/js/pages/home.html
+++ b/app/js/pages/home.html
@@ -47,7 +47,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12 col-sm-12" style="background: #BBD631; border: 1px solid #BBD631">
-            <div class="container-fluid home-tile row">
+            <div class="home-tile row">
                 <div class="col-md-6 col-sm-6 text-center" style="height: 100%; color: white">
                     <h3>Swap your items <br> to these products!</h3>
                     <button type="button" class="btn btn-primary"><b>View Items</b></button>
@@ -62,11 +62,11 @@
     </div>
     <div class="row">
         <div class="col-md-6 col-sm-6" style="background: #e5e5e5; border: 1px solid #e5e5e5">
-            <div class="container-fluid home-tile">
+            <div class="home-tile">
                 <div>
                     <h4 style="color: #50C0C1">What is Palitan Tayo?</h4>
 
-                    <p>
+                    <p style="font-size: 15px">
                         PALITAN TAYO is a free online SWAP marketplace. The users are using this website to share their
                         items to swap for their ideal items.
                         DO YOU WANT TO TRADE YOUR ITEMS? All you have to do is SIGN UP! UPLOAD! SHARE!
@@ -76,15 +76,15 @@
             </div>
         </div>
         <div class="col-md-6 col-sm-6" style="background: #4D4D4D; border: 1px solid #4D4D4D">
-            <div class="container-fluid home-tile text-center">
+            <div class="home-tile text-center">
                 <div>
                     <h4 style="color: white">Trade your items now!</h4>
                     <button type="button" class="btn btn-primary"><b>Sign up with Facebook</b></button>
                     <br>
                     <br>
-                    <button type="button" class="btn btn-default"><b>Register</b></button>
+                    <a href="#login" style="display: inline"><button type="button" class="btn btn-primary"><b>Register</b></button></a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button type="button" class="btn btn-default"><b>Login</b></button>
+                    <a href="#login" style="display: inline"><button type="button" class="btn btn-primary"><b>Login</b></button></a>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
 </div>
 <div class="container-fluid">
     <div class="row hehe2" >
-        <div class="col-md-4 hehe">
+        <div class="col-md-4 col-sm-4 hehe">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="{{globals.rootUrl}}app/images/categories/r1-1.gif" alt="..."/>
@@ -120,7 +120,7 @@
                 {{item}}
             </div>
         </div>
-        <div class="col-md-2 hehe">
+        <div class="col-md-2 col-sm-2 hehe">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="{{globals.rootUrl}}app/images/categories/r1-2.gif" alt="..."/>
@@ -130,7 +130,7 @@
                 {{item}}
             </div>
         </div>
-        <div class="col-md-2 hehe">
+        <div class="col-md-2 col-sm-2 hehe">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="{{globals.rootUrl}}app/images/categories/r1-3.gif" alt="..."/>
@@ -140,7 +140,7 @@
                 {{item}}
             </div>
         </div>
-        <div class="col-md-4 hehe">
+        <div class="col-md-4 col-sm-4 hehe">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="{{globals.rootUrl}}app/images/categories/r1-4.gif" alt="..."/>
@@ -152,7 +152,7 @@
         </div>
     </div>
     <div class="row hehe2">
-        <div class="col-md-2 hehe">
+        <div class="col-md-2 col-sm-2 hehe">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="{{globals.rootUrl}}app/images/categories/r2-1.gif" alt="..."/>
@@ -162,7 +162,7 @@
                 {{item}}
             </div>
         </div>
-        <div class="col-md-2 hehe">
+        <div class="col-md-2 col-sm-2 hehe">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="{{globals.rootUrl}}app/images/categories/r2-2.gif" alt="..."/>
@@ -172,7 +172,7 @@
                 {{item}}
             </div>
         </div>
-        <div class="col-md-4 hehe">
+        <div class="col-md-4 col-sm-4 hehe">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="{{globals.rootUrl}}app/images/categories/r2-3.gif" alt="..."/>
@@ -182,7 +182,7 @@
                 {{item}}
             </div>
         </div>
-        <div class="col-md-2 hehe">
+        <div class="col-md-2 col-sm-2 hehe">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="{{globals.rootUrl}}app/images/categories/r2-4.gif" alt="..."/>
@@ -192,7 +192,7 @@
                 {{item}}
             </div>
         </div>
-        <div class="col-md-2 hehe">
+        <div class="col-md-2 col-sm-2 hehe">
             <div class="thumbnail">
                 <a href="#" class="">
                     <img src="{{globals.rootUrl}}app/images/categories/r2-5.gif" alt="..."/>
