--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@
     <!--Controllers-->
     <script src="app/js/controllers/mainController.js"></script>
     <script src="app/js/controllers/itemsController.js"></script>
+    <script src="app/js/controllers/itemController.js"></script>
+    <script src="app/js/controllers/profileController.js"></script>
     <script src="app/js/controllers/loginController.js"></script>
 
     <!--Services-->
     <script src="app/js/services/loginService.js"></script>
+    <script src="app/js/services/itemService.js"></script>
+    <script src="app/js/services/profileService.js"></script>
     <script src="app/js/services/permissionsService.js"></script>
     <!--Factories-->
     <script src="app/js/factories/globals.js"></script>
@@ -90,11 +94,11 @@
 <div style="z-index: 1000 !important; margin-bottom: 0px !important;">
     <header>
         <nav class="navbar navbar-default" style="margin-bottom: 0px; background: white !important;">
-            <div class="container" style="z-index: 1000 !important; background: white !important;">
+            <div class="container-fluid" style="z-index: 1000 !important; background: white !important;">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/" style="padding-top: 3px;">
                         <!--<h4 style="color: #BBD631; margin-top: 0px"> Palitan <span style="color: #5CBBBF;">Tayo!</span></h4>-->
-                        <!--<img src="{{globals.rootUrl}}app/images/logo2.png" class="" width="150">-->
+                        <img src="{{globals.rootUrl}}app/images/logo2.png" class="" width="200">
                     </a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
@@ -120,10 +124,10 @@
 <div id="footer">
     <div class="container-fluid">
         <div class="row" style="background: #56BEC1">
-            <div class="col-md-7 col-sm-7">
+            <div class="col-md-5">
                 <h5 style="color: white">Sign up for our Newsletter!</h5>
             </div>
-            <div class="col-md-5 col-sm-5" style="padding-top: 5px">
+            <div class="col-md-7" style="padding-top: 5px">
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
                         <input type="text" class="form-control" style="width: 400px" placeholder="Your email address...">
