--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="app/js/controllers/itemsController.js"></script>
     <script src="app/js/controllers/itemController.js"></script>
     <script src="app/js/controllers/profileController.js"></script>
+    <script src="app/js/controllers/postController.js"></script>
     <script src="app/js/controllers/loginController.js"></script>
 
     <!--Services-->
