with upload and submit

--- a/app/js/pages/post.html
+++ b/app/js/pages/post.html
@@ -24,6 +24,7 @@
 
                 </div>
                 <br/>
+
                 <form>
                     <div class="form-group">
                         <input type="text" class="form-control" id="itemName" placeholder="Item Name">
@@ -31,22 +32,69 @@
                     <div class="form-group">
                         <textarea class="form-control" rows="3" placeholder="Description"></textarea>
                     </div>
-                    <div style="display: inline-block">
-                        <div class="form-group">
-                            <select class="form-control">
-                                <option>Select range to</option>
-                                <option>500</option>
-                                <option>100</option>
-                                <option>5,000</option>
-                                <option>10,000</option>
-                                <option>Above</option>
-                            </select>
+                    <div>
+                        <div style="display: inline-block">
+                            <div class="form-group">
+                                <select class="form-control" style="width: 170px">
+                                    <option>Salect range from</option>
+                                    <option>100</option>
+                                    <option>500</option>
+                                    <option>5,000</option>
+                                    <option>10,000</option>
+                                    <option>Above</option>
+                                </select>
+                            </div>
+                        </div>
+                        &nbsp;
+
+                        <div style="display: inline-block">
+                            <div class="form-group">
+                                <select class="form-control" style="width: 170px">
+                                    <option>Select range to</option>
+                                    <option>100</option>
+                                    <option>500</option>
+                                    <option>5,000</option>
+                                    <option>10,000</option>
+                                    <option>Above</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
-            </div>
+
+                    <div class="">
+                        <div style="display: inline-block">
+                            <div class="form-group">
+                                <select class="form-control" style="width: 170px">
+                                    <option>Select Gategory</option>
+                                    <option>Shoes</option>
+                                    <option>Clothes</option>
+                                    <option>Cars</option>
+                                    <option>Collectibles</option>
+                                    <option>Kahit ano</option>
+                                </select>
+                            </div>
+                        </div>
+                        &nbsp;
+
+                        <div style="display: inline-block">
+                            <div class="form-group">
+                                <select class="form-control" style="width: 170px">
+                                    <option>Select Condition</option>
+                                    <option>New</option>
+                                    <option>USed</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <label for="uploadImage">Upload Image</label>
+                    <input type="file" id="uploadImage">
+                    <br/>
+                    <button type="submit" class="btn btn-success"> Submit</button>
+                    <br/>
+                    <br/>
                 </form>
+            </div>
         </div>
     </div>
-</div>
 
 
