--- a/app/js/pages/login.html
+++ b/app/js/pages/login.html
@@ -53,18 +53,18 @@
                 <div class="page-header" style="margin-top: 0px">
                     <h4 style="color: white">Register Here!</h4>
                 </div>
-                <form class="navbar-form" role="register">
+                <form>
                     <div class="form-group" style="width: 100%">
                         <input type="text" class="form-control" style="width: 100%" placeholder="Username">
-                        <br>
-                        <br>
                         <input type="password" class="form-control" style="width: 100%" placeholder="Password">
                         <br>
                         <br>
-                        <input type="text" class="form-control" style="width: 100%" placeholder="First Name">
-                        <br>
-                        <br>
-                        <input type="text" class="form-control" style="width: 100%" placeholder="Last Name">
+                        <div style="display: inline-block">
+                            <input type="text" class="form-control" style="width: 48%" placeholder="First Name">
+                            &nbsp;
+                            <input type="text" class="form-control" style="width: 48%" placeholder="Last Name">
+                        </div>
+
                         <br>
                         <br>
                         <input type="email" class="form-control" style="width: 100%" placeholder="Email Address">
